project2_build_webserver_bootstrap/main.tf
#build web server with bootstrap
provider "aws" {
  region = "eu-central-1"
}

resource "aws_instance" "web" {
  ami                    = "ami-00f22f6155d6d92c5" #amazon Linux 2 instance
  instance_type          = "t3.micro"
  vpc_security_group_ids = [aws_security_group.web.id] #create dependencies,
  #the resource aws_instance depends from the security group,
  #creating first the security group and next put the dependencies into aws_instance
  user_data = <<EOF
#!/bin/bash
yum -y update
yum -y install httpd
MYIP=`curl http://169.254.169.254/latest/meta-data/local-ipv4`
echo "<h2>WebServer with PrivateIP: $MYIP</h2><br>Built by Terraform" > /var/www/html/index.html
service httpd start
chkconfig httpd on
EOF
  tags = {
    Name  = "web server built by terraform"
    Owner = "a1500"
  }
}

resource "aws_security_group" "web" {
  name        = "web_server-SG"
  description = "access to my web server with the security group"

  ingress {
    description = "allow http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "allow https"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "allow all ports"
    from_port   = 0 #0 means all ports
    to_port     = 0
    protocol    = "-1" #-1 means all protocols
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name  = "web server SG by terraform"
    Owner = "a1500"
  }
}
